--- a/00.main.RMD
+++ b/00.main.RMD
@@ -110,3 +110,107 @@ Dicas
 Quer lambdas que somem 1 (combinação convexa)? Rode o mesmo modelo com RTS = "vrs". Para gráficos da fronteira e projeções, posso te mandar um plot rápido com as DMUs, a fronteira CCR e as setas de projeção.
 
 
+```{r}
+# install.packages("Benchmarking")
+library(Benchmarking)
+
+## ----------------------
+## 1) Dados (6 DMUs do slide)
+## ----------------------
+X <- matrix(
+  c(2,4,   # DMU1
+    4,2,   # DMU2
+    3,3,   # DMU3
+    1,5,   # DMU4
+    5,1,   # DMU5
+    2,4),  # DMU6 (igual à DMU1 no slide)
+  ncol = 2, byrow = TRUE)
+Y <- matrix(rep(10, 6), ncol = 1)
+
+rownames(X) <- paste0("DMU", 1:6)
+colnames(X) <- c("x1","x2")
+rownames(Y) <- paste0("DMU", 1:6)
+colnames(Y) <- "y"
+
+## ----------------------
+## 2) Lambdas informados (entre aspas)
+## ----------------------
+L_txt <- "
+         DMU1 DMU2     DMU3 DMU4 DMU5 DMU6
+DMU1 1.000000    0 0.000000    0    0    0
+DMU2 1.086957    0 0.000000    0    0    0
+DMU3 0.000000    0 1.000000    0    0    0
+DMU4 0.000000    0 0.000000    1    0    0
+DMU5 0.000000    0 1.000000    0    0    0
+DMU6 1.534247    0 0.196347    0    0    0
+"
+L <- read.table(text = L_txt, header = TRUE, check.names = FALSE)
+L <- as.matrix(L)
+rownames(L) <- rownames(X)
+
+## ----------------------
+## 3) DEA (CCR, in) e projeções/targets
+## ----------------------
+dea_crs <- dea(X, Y, RTS = "crs", ORIENTATION = "in", SLACK = TRUE)
+
+theta <- eff(dea_crs)                # eficiência radial
+sx    <- dea_crs$sx; sy <- dea_crs$sy
+# Targets (ponto projetado na fronteira)
+X_target <- sweep(X, 1, theta, "*") - sx
+Y_target <- Y + sy
+
+## Pontos de referência pela coluna de lambdas (X_ref = X^T %*% lambda_j)
+# (opcional: útil para checar peers)
+if (!all(colnames(L) %in% rownames(X))) colnames(L) <- rownames(X)[1:ncol(L)]
+X_ref <- t(X) %*% L
+colnames(X_ref) <- colnames(L); rownames(X_ref) <- colnames(X)
+
+## ----------------------
+## 4) Plot da fronteira eficiente + DMUs + projeções
+## ----------------------
+op <- par(no.readonly = TRUE)
+
+# 4.1) Janela e DMUs
+plot(X[,1], X[,2],
+     xlab = "x1 (insumo)", ylab = "x2 (insumo)",
+     xlim = c(0, max(X[,1])*1.2), ylim = c(0, max(X[,2])*1.2),
+     pch = 19, cex = 1.1)
+text(X[,1], X[,2], labels = rownames(X), pos = 3, cex = 0.9)
+
+# 4.2) Fronteira eficiente (isoquanta y=10) – função do pacote
+dea.plot.frontier(X, Y, RTS = "crs", ORIENTATION = "in",
+                  add = TRUE, lwd = 2)
+
+# 4.3) Destacar DMUs eficientes
+is_eff <- abs(theta - 1) < 1e-6
+points(X[is_eff,1], X[is_eff,2], pch = 17, cex = 1.4)   # triângulos para eficientes
+
+# 4.4) Setas de projeção (do ponto original até o target na fronteira)
+arrows(X[,1], X[,2], X_target[,1], X_target[,2],
+       length = 0.08, lwd = 1.5)
+
+legend("topright",
+       legend = c("DMUs", "Eficientes (θ=1)", "Fronteira CRS", "Projeções"),
+       pch = c(19,17,NA,NA), lty = c(NA,NA,1,1), lwd = c(NA,NA,2,1.5),
+       bty = "n")
+
+par(op)
+
+## ----------------------
+## 5) (Opcional) Tabela rápida para conferir
+## ----------------------
+out_tab <- data.frame(
+  DMU = rownames(X),
+  theta = round(theta, 3),
+  x1 = X[,1], x2 = X[,2],
+  x1_target = round(X_target[,1], 3),
+  x2_target = round(X_target[,2], 3),
+  eff = ifelse(is_eff, "eficiente", "ineficiente"),
+  row.names = NULL
+)
+print(out_tab)
+
+```
+
+
+
